Fix alignment of nested messages with origin

--- a/app/assets/stylesheets/main/main_channel_area/message_list.css
+++ b/app/assets/stylesheets/main/main_channel_area/message_list.css
@@ -34,20 +34,29 @@
   min-width: 100%;
   height: 100%;
   padding-left: 25px;
+  margin-top: 2px;
 }
 
 .message-list-item:hover {
   background: #F9F9F9;
 }
 
-.message-body {
+.message-list-item-nested {
+  display: flex;
+  color: #2C2D30;
   padding-top: 3px;
-  font-size: 13px;
-  width: 96%;
-  font-weight: 400;
+  padding-bottom: 3px;
+  min-width: 100%;
   height: 100%;
-  word-wrap: break-word;
-  line-height: 17px;
+  padding-left: 25px;
+}
+
+.message-list-item-nested:hover {
+  background: #F9F9F9;
+}
+
+.message-list-item-nested:hover .message-content-header-nested-timestamp {
+  visibility: visible;
 }
 
 .message-content-header-timestamp {
@@ -70,12 +79,25 @@
 .message-content-header-nested-timestamp {
   color: #717274;
   font-size: 9px;
-  width: 4%;
   height: 100%;
-  margin-left: -.8%;
+  width: 40px;
+  right: 10px;
   visibility: hidden;
-  margin-right: 0.09%;
+  position: relative;
+  right: 14px;
 }
+
+
+.message-body {
+  padding-top: 3px;
+  font-size: 13px;
+  width: 93%;
+  font-weight: 400;
+  height: 100%;
+  word-wrap: break-word;
+  line-height: 17px;
+}
+
 
 .message-list-item:hover .message-content-header-nested-timestamp {
   visibility: visible;
